api-deployment-ingress.yml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata : 
  name : api-siase
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  ingressClassName : nginx
  rules:
  - http :
      paths :
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-siase
            port:
              number : 8080
